--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </table>
   <hr>
   <p><a href="certifications.html">Certifications</a></p>
-  <p><a href="input.html">Code Playbook</a></p>
+  <p><a href="/Users/vladmunteanu/Desktop/Code Playbook/input.html">Code Playbook</a></p>
 
   <h3>Book List</h3>
   <table border="1">
